# EtherCATAliasGUI

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
gui/: AliasConfig.cpp  AliasConfig.h  CMakeLists.txt  EtherCATWorker.cpp  EtherCATWorker.h  MK2_alias_config.json  MainWindow.cpp  MainWindow.h  app.rc  main.cpp
